feat: add session detail api
